syntax = "proto3";

service TaskService {
  rpc CreateTask (TaskRequest) returns (TaskResponse);
  rpc ListTasks (Empty) returns (TaskListResponse);
  rpc UpdateTask (TaskRequest) returns (TaskResponse);  // Agregar actualización de tarea
  rpc DeleteTask (TaskRequest) returns (TaskResponse);  // Agregar eliminación de tarea
}

message TaskRequest {
  string title = 1;
  string description = 2;
}

message TaskResponse {
  bool success = 1;
}

message TaskListResponse {
  repeated Task tasks = 1;
}

message Task {
  string title = 1;
  string description = 2;
}

message Empty {}
